--- a/app/globals.css
+++ b/app/globals.css
@@ -128,6 +128,9 @@
   .overline {
     @apply text-[10px] leading-[14px] font-normal;
   }
+  .bg-brand {
+    @apply bg-brand-100; /* or bg-brand-101 */
+  }
 
   /* ===== HELPER CLASSES */
   .container {
